--- a/src/partials/modal-our-team.html
+++ b/src/partials/modal-our-team.html
@@ -147,7 +147,7 @@
       <div class="team-member">
         <div class="team-member__img-container">
           <img
-            src="./images/team-photo/sergii_proiava.png"
+            src="./images/team-photo/sergii_proiava.jpg"
             alt="Sergii Proiava"
             width="120"
             height="120"
