--- a/src/partials/modal-our-team.html
+++ b/src/partials/modal-our-team.html
@@ -130,7 +130,7 @@
           />
         </div>
         <div class="team-member__text-container">
-          <p class="team-member__name">Anna Lahoda</p>
+          <p class="team-member__name">Anna Lahoda)</p>
           <p class="team-member__role">Front End Developer</p>
           <a
             href="https://github.com/LagodaAnna"
